cluster/rancher/rancher-exec-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: rancher-exec
  namespace: cattle-system
spec:
   ingressClassName: nginx 
   rules:
   - host: 'roomofrequirement.xyz'
     http:
       paths:
       - backend:
           service:
             name: rancher
             port:
               number: 80
         pathType: ImplementationSpecific
